[project]
name = "ComfyUI-ImageGallery-ED"
description = "Custom javascript extensions for better UX for ComfyUI. Double click on image to open. It's convenient for checking images."
version = "0.8.1"
license = { file = "LICENSE" }
dependencies = []

[project.urls]
Repository = "https://github.com/NyaamZ/ComfyUI-ImageGallery-ED"
#  Used by Comfy Registry https://comfyregistry.org

[tool.comfy]
PublisherId = "nyaamz"
DisplayName = "ComfyUI-ImageGallery-ED"
Icon = "https://upload.wikimedia.org/wikipedia/commons/8/87/Magnifying_glass_icon_mgx2.svg"
